# glabels-qt

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: build-tests.yml  tag-snapshot.yml
backends/barcode/: Backends.cpp  Backends.hpp  CMakeLists.txt  GnuBarcode.cpp  GnuBarcode.hpp  QrEncode.cpp  QrEncode.hpp  Style.cpp  Style.hpp  Zint.cpp  Zint.hpp
backends/merge/: CMakeLists.txt  Factory.cpp  Factory.hpp  Merge.cpp  Merge.h  Merge.hpp  None.cpp  None.h  None.hpp  Record.cpp  Record.h  Record.hpp  Text.cpp  Text.h  Text.hpp  TextColon.cpp  TextColon.h  TextColon.hpp  TextColonKeys.cpp  TextColonKeys.h  TextColonKeys.hpp  TextCsv.cpp  TextCsv.h  TextCsv.hpp  TextCsvKeys.cpp  TextCsvKeys.h  TextCsvKeys.hpp  TextSemicolon.cpp  TextSemicolon.h  TextSemicolon.hpp  TextSemicolonKeys.cpp  TextSemicolonKeys.h  TextSemicolonKeys.hpp  TextTsv.cpp  TextTsv.h  TextTsv.hpp  TextTsvKeys.cpp  TextTsvKeys.h  TextTsvKeys.hpp
data/: CMakeLists.txt  org.glabels.glabels-qt.desktop  org.glabels.glabels-qt.metainfo.xml  org.glabels.glabels-qt.mime.xml
docs/: BUILD-INSTRUCTIONS-LINUX.md  BUILD-INSTRUCTIONS-MACOS.md  CODING-STYLE.md  MISC.md  TRANSLATIONS.md
glabels/: AboutDialog.cpp  AboutDialog.hpp  BarcodeMenu.cpp  BarcodeMenu.hpp  BarcodeMenuButton.cpp  BarcodeMenuButton.hpp  BarcodeMenuItem.cpp  BarcodeMenuItem.hpp  CMakeLists.txt  ColorButton.cpp  ColorButton.h  ColorButton.hpp  ColorHistory.cpp  ColorHistory.hpp  ColorPaletteDialog.cpp  ColorPaletteDialog.h  ColorPaletteDialog.hpp  ColorPaletteItem.cpp  ColorPaletteItem.hpp  ColorSwatch.cpp  ColorSwatch.hpp  Cursors.cpp  Cursors.h  Cursors.hpp  EditVariableDialog.cpp  EditVariableDialog.hpp  FieldButton.cpp  FieldButton.h  FieldButton.hpp  File.cpp  File.hpp  Help.cpp  Help.hpp  LabelEditor.cpp  LabelEditor.h  LabelEditor.hpp  MainWindow.cpp  MainWindow.h  MainWindow.hpp  MergeTableModel.cpp  (+59 more)
glabels-batch/: CMakeLists.txt  main.cpp
glabels/ui/: EditVariableDialog.ui  MergeView.ui  ObjectEditor.ui  PrintView.ui  PropertiesView.ui  ReportBugDialog.ui  SelectProductDialog.ui  TemplateDesignerContinuousPage.ui  TemplateDesignerIntroPage.ui  TemplateDesignerOneLayoutPage.ui  TemplateDesignerPathPage.ui  TemplateDesignerTwoLayoutPage.ui  VariablesView.ui
glbarcode/: Barcode.cpp  Barcode.hpp  Barcode1dBase.cpp  Barcode1dBase.hpp  Barcode2dBase.cpp  Barcode2dBase.hpp  BarcodeCepnet.cpp  BarcodeCepnet.hpp  BarcodeCode39.cpp  BarcodeCode39.hpp  BarcodeCode39Ext.cpp  BarcodeCode39Ext.hpp  BarcodeDataMatrix.cpp  BarcodeDataMatrix.hpp  BarcodeEan13.cpp  BarcodeEan13.hpp  BarcodeOnecode.cpp  BarcodeOnecode.hpp  BarcodePostnet.cpp  BarcodePostnet.hpp  BarcodePostnet11.cpp  BarcodePostnet11.hpp  BarcodePostnet5.cpp  BarcodePostnet5.hpp  BarcodePostnet9.cpp  BarcodePostnet9.hpp  BarcodeQrcode.cpp  BarcodeQrcode.hpp  BarcodeUpcA.cpp  BarcodeUpcA.hpp  BarcodeUpcBase.cpp  BarcodeUpcBase.hpp  CMakeLists.txt  Constants.hpp  DrawingPrimitives.cpp  DrawingPrimitives.hpp  Enums.hpp  Factory.cpp  Factory.hpp  Matrix.hpp  (+5 more)
model/: CMakeLists.txt  Category.cpp  Category.h  Category.hpp  ColorNode.cpp  ColorNode.h  ColorNode.hpp  Config.hpp.in  Constants.hpp  DataCache.cpp  DataCache.hpp  Db.cpp  Db.h  Db.hpp  Distance.cpp  Distance.h  Distance.hpp  FileUtil.cpp  FileUtil.hpp  Frame.cpp  Frame.h  Frame.hpp  FrameCd.cpp  FrameCd.h  FrameCd.hpp  FrameContinuous.cpp  FrameContinuous.h  FrameContinuous.hpp  FrameEllipse.cpp  FrameEllipse.h  FrameEllipse.hpp  FramePath.cpp  FramePath.h  FramePath.hpp  FrameRect.cpp  FrameRect.h  FrameRect.hpp  FrameRound.cpp  FrameRound.h  FrameRound.hpp  (+110 more)
model/unit_tests/: CMakeLists.txt  TestColorNode.cpp  TestColorNode.hpp  TestFileUtil.cpp  TestFileUtil.hpp  TestMerge.cpp  TestMerge.hpp  TestModel.cpp  TestModel.hpp  TestModelImageObject.cpp  TestModelImageObject.hpp  TestRawText.cpp  TestRawText.hpp  TestStrUtil.cpp  TestStrUtil.hpp  TestSubstitutionField.cpp  TestSubstitutionField.hpp  TestTextNode.cpp  TestTextNode.hpp  TestVariable.cpp  TestVariable.hpp  TestVariables.cpp  TestVariables.hpp  TestXmlLabel.cpp  TestXmlLabel.hpp  TestXmlUtil.cpp  TestXmlUtil.hpp  Test_Constants.hpp
templates/: LICENSE  brother-other-templates.xml  glabels-3.0.dtd  glabels-4.0.dtd  herma-iso-templates.xml
test-data/: simple-code39.glabels  simple-shapes.glabels  simple-text-liberation-sans.glabels  simple-text-liberation-serif.glabels
test-data/glabels-3/raw/: crew-orientation-name-tags-7.glabels
translations/: CMakeLists.txt  LINGUAS  XmlStrings.cpp  glabels_C.ts  glabels_ar.ts  glabels_bs.ts  glabels_ca.ts  glabels_cs.ts  glabels_da.ts  glabels_de.ts  glabels_el.ts  glabels_en_GB.ts  glabels_eo.ts  glabels_es.ts  glabels_et.ts  glabels_fi.ts  glabels_fr.ts  glabels_gl.ts  glabels_gu_IN.ts  glabels_hi_IN.ts  glabels_hu.ts  glabels_id.ts  glabels_it.ts  glabels_ja.ts  glabels_ka.ts  glabels_kab.ts  glabels_ko.ts  glabels_lv.ts  glabels_nb.ts  glabels_nl.ts  glabels_oc.ts  glabels_pl.ts  glabels_pl_PL.ts  glabels_pt.ts  glabels_pt_BR.ts  glabels_ro.ts  glabels_ru.ts  glabels_sk.ts  glabels_sl.ts  glabels_sr.ts  (+47 more)
user-docs/: README.md
user-docs/_build/man/: glabels-batch-qt.1  glabels-qt.1
user-docs/man/: glabels-batch-qt.rst
