#=======================================
# Install
#=======================================
install (FILES org.glabels.glabels-qt.desktop      DESTINATION share/applications)
install (FILES org.glabels.glabels-qt.mime.xml     DESTINATION share/mime/packages)
install (FILES org.glabels.glabels-qt.metainfo.xml DESTINATION share/metainfo)

